# khaddock-sailor

./: .gitignore  .pre-commit-config.yaml  .tool-versions  main.py  setup.cfg
examples/: vm.yaml
khaddock_sailor/: commands.py  kernel.py  sysctl.py
tests/e2e/bootstrap/ansible/: README.md  goss_run_tests.yml  requirements.txt
tests/e2e/bootstrap/ansible/inventories/: khaddock-sailor.ini
tests/e2e/bootstrap/ansible/roles/common/setup/tasks/: main.yml  python.yml
tests/e2e/bootstrap/ansible/roles/goss/run_tests/tasks/: main.yml
tests/e2e/bootstrap/ansible/roles/goss/setup/tasks/: main.yml
tests/e2e/bootstrap/terraform/: .terraform.lock.hcl  README.md  main.tf  provider.tf  variables.tf  versions.tf
tests/e2e/bootstrap/terraform/templates/: inventory.tftpl
tests/e2e/goss/: kernel_parameters.yml  sysctl.yml
