[metadata]
name = khaddock_sailor
description = A sailor that follows order to prepare ships.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MadJlzz/khaddock-sailor
version = 0.1.0
author = Julien Klaer
classifiers =
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    khaddock-engine

[options.extras_require]
dev =
    pre-commit
